Update to JDK 25 / JavaFX 25 / Gradle 9.x.